updated swagger config
