# swift/GraphHopper/Classes/Swaggers/APIs/IsochroneAPI.swift
@@ -20,10 +20,11 @@ public class IsochroneAPI: APIBase {
      - parameter vehicle: (query) Possible vehicles are bike, car, foot and [more](https://graphhopper.com/api/1/docs/supported-vehicle-profiles/) (optional, default to car)
      - parameter buckets: (query) For how many sub intervals an additional polygon should be calculated. (optional, default to 1)
      - parameter reverseFlow: (query) If &#x60;false&#x60; the flow goes from point to the polygon, if &#x60;true&#x60; the flow goes from the polygon \&quot;inside\&quot; to the point. Example usage for &#x60;false&#x60;&amp;#58; *How many potential customer can be reached within 30min travel time from your store* vs. &#x60;true&#x60;&amp;#58; *How many customers can reach your store within 30min travel time.* (optional, default to false)
+     - parameter weighting: (query) Can be fastest or shortest (optional, default to fastest)
      - parameter completion: completion handler to receive the data and the error objects
      */
-    public class func isochroneGet(point point: String, key: String, timeLimit: Int32? = nil, distanceLimit: Int32? = nil, vehicle: String? = nil, buckets: Int32? = nil, reverseFlow: Bool? = nil, completion: ((data: IsochroneResponse?, error: ErrorType?) -> Void)) {
-        isochroneGetWithRequestBuilder(point: point, key: key, timeLimit: timeLimit, distanceLimit: distanceLimit, vehicle: vehicle, buckets: buckets, reverseFlow: reverseFlow).execute { (response, error) -> Void in
+    public class func isochroneGet(point point: String, key: String, timeLimit: Int32? = nil, distanceLimit: Int32? = nil, vehicle: String? = nil, buckets: Int32? = nil, reverseFlow: Bool? = nil, weighting: String? = nil, completion: ((data: IsochroneResponse?, error: ErrorType?) -> Void)) {
+        isochroneGetWithRequestBuilder(point: point, key: key, timeLimit: timeLimit, distanceLimit: distanceLimit, vehicle: vehicle, buckets: buckets, reverseFlow: reverseFlow, weighting: weighting).execute { (response, error) -> Void in
             completion(data: response?.body, error: error);
         }
     }
@@ -63,10 +64,11 @@ public class IsochroneAPI: APIBase {
      - parameter vehicle: (query) Possible vehicles are bike, car, foot and [more](https://graphhopper.com/api/1/docs/supported-vehicle-profiles/) (optional, default to car)
      - parameter buckets: (query) For how many sub intervals an additional polygon should be calculated. (optional, default to 1)
      - parameter reverseFlow: (query) If &#x60;false&#x60; the flow goes from point to the polygon, if &#x60;true&#x60; the flow goes from the polygon \&quot;inside\&quot; to the point. Example usage for &#x60;false&#x60;&amp;#58; *How many potential customer can be reached within 30min travel time from your store* vs. &#x60;true&#x60;&amp;#58; *How many customers can reach your store within 30min travel time.* (optional, default to false)
+     - parameter weighting: (query) Can be fastest or shortest (optional, default to fastest)
 
      - returns: RequestBuilder<IsochroneResponse> 
      */
-    public class func isochroneGetWithRequestBuilder(point point: String, key: String, timeLimit: Int32? = nil, distanceLimit: Int32? = nil, vehicle: String? = nil, buckets: Int32? = nil, reverseFlow: Bool? = nil) -> RequestBuilder<IsochroneResponse> {
+    public class func isochroneGetWithRequestBuilder(point point: String, key: String, timeLimit: Int32? = nil, distanceLimit: Int32? = nil, vehicle: String? = nil, buckets: Int32? = nil, reverseFlow: Bool? = nil, weighting: String? = nil) -> RequestBuilder<IsochroneResponse> {
         let path = "/isochrone"
         let URLString = GraphHopperAPI.basePath + path
 
@@ -77,6 +79,7 @@ public class IsochroneAPI: APIBase {
             "vehicle": vehicle,
             "buckets": buckets?.encodeToJSON(),
             "reverse_flow": reverseFlow,
+            "weighting": weighting,
             "key": key
         ]
  
